--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Belajar Kotlin</string>
+    <string name="title_home">Popular</string>
+    <string name="title_dashboard">Latest</string>
+    <string name="title_oldest">Oldest</string>
 </resources>
